@@ -1,0 +1,10 @@
+# Copyright (c) 2024 Yuki Kimoto
+# MIT License
+
+use strict;
+use warnings;
+use SPVM::Builder::Config;
+
+my $config = SPVM::Builder::Config->new_gnu99(file => __FILE__);
+
+$config;
