@@ -3,4 +3,7 @@
 
 class Net::SSLeay::Util {
   
+  # Class Methods
+  native static method convert_to_wire_format : byte[] ($protocols : string[]);
+  
 }
