@@ -7,12 +7,15 @@ use lib "$FindBin::Bin/lib";
 BEGIN { $ENV{SPVM_BUILD_DIR} = "$FindBin::Bin/.spvm_build"; }
 
 use SPVM 'TestCase::Net::SSLeay';
+use SPVM 'TestCase::Net::SSLeay::Util';
 
 use SPVM 'Net::SSLeay';
 use SPVM::Net::SSLeay;
 use SPVM 'Fn';
 
 ok(SPVM::TestCase::Net::SSLeay->test);
+
+ok(SPVM::TestCase::Net::SSLeay::Util->convert_to_wire_format);
 
 # Version
 {
